tests/algorithms/x/C/web_programming/current_weather.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t current_weather_len;

size_t append_len;
static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

typedef struct { const char **keys; const char **vals; size_t len; size_t cap; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;

struct Anon1 {
    const char* location;
    const char* temperature;
};

struct Anon2 {
    Anon1 OpenWeatherMap;
};

const char* OPENWEATHERMAP_API_KEY = "demo";
const char* WEATHERSTACK_API_KEY = "";
const char* OPENWEATHERMAP_URL_BASE = "https://api.openweathermap.org/data/2.5/weather";
const char* WEATHERSTACK_URL_BASE = "http://api.weatherstack.com/current";

MapSS http_get(const char* url, MapSS params);
int * current_weather(const char* location);
void user_main();
int main(void);

MapSS http_get(const char* url, MapSS params) {
    if (contains_str(params.keys, params.len, "q")) {
        return (MapIL){0};
    }
    return (MapIL){0};
}

int * current_weather(const char* location) {
    int *weather_data = NULL;
    size_t weather_data_len = 0;
    if (1LL) {
        const char* params_openweathermap_keys[18] = {"q", "appid"};
        const char* params_openweathermap_vals[18] = {location, OPENWEATHERMAP_API_KEY};
        size_t params_openweathermap_len = 2;
        MapSS params_openweathermap = { params_openweathermap_keys, params_openweathermap_vals, 2, 18 };
        MapSS response_openweathermap = http_get(OPENWEATHERMAP_URL_BASE, params_openweathermap);
        weather_data = list_append_int(weather_data, &weather_data_len, (MapIL){0});
    }
    if (0LL) {
        const char* params_weatherstack_keys[18] = {"query", "access_key"};
        const char* params_weatherstack_vals[18] = {location, WEATHERSTACK_API_KEY};
        size_t params_weatherstack_len = 2;
        MapSS params_weatherstack = { params_weatherstack_keys, params_weatherstack_vals, 2, 18 };
        MapSS response_weatherstack = http_get(WEATHERSTACK_URL_BASE, params_weatherstack);
        weather_data = list_append_int(weather_data, &weather_data_len, (MapIL){0});
    }
    if (weather_data_len == 0LL) {
        panic("No API keys provided or no valid data returned.");
    }
    return current_weather_len = weather_data_len, weather_data;
}

void user_main() {
    long long *data = current_weather("New York");
    size_t data_len = current_weather_len;
    puts(str_list_int(data, data_len));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
